--- a/src/_includes/meta.liquid
+++ b/src/_includes/meta.liquid
@@ -10,3 +10,5 @@
 <meta property="og:type" content="website" />
 <meta name="theme-color" content="#ffffff" />
 <meta name="date" content="{{ today }}" />
+<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<link rel="manifest" href="/manifest.json" />
