--- a/src/records/record.liquid
+++ b/src/records/record.liquid
@@ -3,6 +3,7 @@ pagination:
   data: records
   size: 1
   alias: record
+  addAllPagesToCollections: true
 permalink: "/records/{{ record.id }}/"
 layout: base.liquid
 eleventyComputed:
