--- a/src/tags/tags.liquid
+++ b/src/tags/tags.liquid
@@ -3,6 +3,7 @@ pagination:
   data: records_by_tag
   size: 1
   alias: tag
+  addAllPagesToCollections: true
 permalink: "/tags/{{ tag.key }}/"
 layout: base.liquid
 eleventyComputed:
