--- a/src/books/books.liquid
+++ b/src/books/books.liquid
@@ -3,6 +3,7 @@ pagination:
   data: records_by_book
   size: 1
   alias: book
+  addAllPagesToCollections: true
 permalink: "/books/{{ book.bookKey }}/"
 layout: base.liquid
 eleventyComputed:
