--- a/src/books/books.liquid
+++ b/src/books/books.liquid
@@ -10,6 +10,8 @@ eleventyComputed:
   title: "{{ book.bookKey }}"
 ---
 
+<a href="/books">Liste des livres</a>
+
 <article>
   <header>
     <h1>{{ book.bookKey }}</h1>
