--- a/src/tags/tags.liquid
+++ b/src/tags/tags.liquid
@@ -10,6 +10,8 @@ eleventyComputed:
   title: "{{ tag.key }}"
 ---
 
+<a href="/tags">Liste des tags</a>
+
 <article>
   <header>
     <h1>{{ tag.key }}</h1>
